# bernard_browser_agent

./: .env.example  GITHUB_INTEGRATION.md  INTEGRATION_COMPLETE.md  LICENSE  Readme.md  agent.py  agent_tools.py  browser_controller.py  config.py  input_helpers.py  introduction.ipynb  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: browser-testing.yml
agent/: agent.py
browser/: browser_setup.py
browser/analyzers/: page_analyzer.py
browser/controllers/: browser_controller.py  element_controller.py  keyboard_controller.py
browser/navigation/: navigator.py  scroll_manager.py
browser/utils/: dom_helpers.py  input_helpers.py  user_interaction.py
cli/: chrome_launcher.py  commands.py  main.py
cli/core/: __init__.py  colors.py  status.py  terminal.py
cli/handlers/: __init__.py  clean.py  config.py  connect.py  debug.py  diagnose.py  help.py  launch.py  profiles.py  run.py  version.py
cli/parsers/: __init__.py  args.py
cli/utils/: __init__.py  system.py
configurations/: config.py
docs/: ARCHITECTURE.md  BROWSER_TOOLS.md  CLI_MODULAR_STRUCTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  INSTALLATION.md  LLM_PROVIDERS.md  QUICK_START.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md
integrations/: README.md  browser-testing.yml  config.env  enhanced_workflow.js  github_integration.py  test_integration.py  test_workflow.js
