[project]
name = "browser-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.2",
    "langgraph>=0.2.20",
    "playwright>=1.40.0",
    "psutil>=5.9.0",
    "pydantic>=2",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.5.0",
]
